Projeye son dokunuşları yapıyorum
Hemen hemen tüm gereken class'ları ekledim.

Haftasonu tekrar bir göz atacağım eksik olup olmadığına ve sonra belki test class'ları eklerim.